[gd_scene load_steps=5 format=3 uid="uid://dbycpspfy50ua"]

[ext_resource type="Texture2D" uid="uid://cvqf3cyt6u8y1" path="res://Assets/Graphics/fish.png" id="1_2npwu"]
[ext_resource type="Script" path="res://Assets/Scripts/fish.gd" id="1_d3taw"]

[sub_resource type="CircleShape2D" id="CircleShape2D_pyg6t"]

[sub_resource type="CircleShape2D" id="CircleShape2D_8ixc8"]
radius = 14.0

[node name="Fish" type="CharacterBody2D"]
collision_layer = 2
collision_mask = 0
script = ExtResource("1_d3taw")

[node name="Sprite2D" type="Sprite2D" parent="."]
texture_filter = 1
scale = Vector2(2, 2)
texture = ExtResource("1_2npwu")

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
z_index = -1
shape = SubResource("CircleShape2D_pyg6t")

[node name="ChangeDirectionTimer" type="Timer" parent="."]

[node name="Area2D" type="Area2D" parent="."]

[node name="CollisionShape2D" type="CollisionShape2D" parent="Area2D"]
shape = SubResource("CircleShape2D_8ixc8")

[connection signal="timeout" from="ChangeDirectionTimer" to="." method="_on_change_direction_timer_timeout"]
[connection signal="body_entered" from="Area2D" to="." method="_on_body_entered"]
